--- a/Packs/SplunkPy/Classifiers/classifier-splunk-generic-incoming-mapper.json
+++ b/Packs/SplunkPy/Classifiers/classifier-splunk-generic-incoming-mapper.json
@@ -14,6 +14,10 @@
                     "complex": null,
                     "simple": "owner"
                 },
+                "Notable ID": {
+                    "complex": null,
+                    "simple": "event_id"
+                },
                 "Notable Status": {
                     "complex": {
                         "accessor": "",
