--- a/Packs/SplunkPy/Classifiers/classifier-splunk-generic-incoming-mapper.json
+++ b/Packs/SplunkPy/Classifiers/classifier-splunk-generic-incoming-mapper.json
@@ -14,7 +14,7 @@
                     "complex": null,
                     "simple": "owner"
                 },
-                "Notable ID": {
+                "Notable - ID": {
                     "complex": null,
                     "simple": "event_id"
                 },
